fix the table height for glossary and expand/collapse background color

--- a/openmetadata-ui/src/main/resources/ui/src/components/common/StatusBadge/status-badge.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/common/StatusBadge/status-badge.less
@@ -15,7 +15,7 @@
 
 .status-badge {
   border-radius: 16px;
-  padding: 6px 12px;
+  padding: 6px 16px;
   text-align: center;
   max-width: fit-content;
   display: flex;
@@ -42,6 +42,11 @@
   &.running {
     color: @blue-21;
     background-color: @blue-22;
+  }
+
+  &.inReview {
+    color: @blue-9;
+    background-color: @blue-11;
   }
 
   &.stopped,
